--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,9 @@ services:
     build:
       context: ./BachelorModelViewController
       dockerfile: Dockerfile
+
+  webapplication1:
+    image: webapplication1
+    build:
+      context: ./WebApplication1
+      dockerfile: Dockerfile
