removing all unnecessary things, adding migrations. added psql server. - it kinda works.

--- a/BachelorModelViewController/appsettings.json
+++ b/BachelorModelViewController/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=bachelor;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=bachelor;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Dataconnection": "Server=localhost:5432;Database=postgres;User=postgres;Password=Admin123;"
   },
   "Logging": {
     "IncludeScopes": false,
