viewmodels for account. AccountController made.

--- a/BachelorModelViewController/BachelorModelViewController.csproj
+++ b/BachelorModelViewController/BachelorModelViewController.csproj
@@ -31,7 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Shared\" />
+    <Folder Include="Models\ViewModels\AccountViewModels\" />
+    <Folder Include="Models\ViewModels\ManagedViewModels\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
