you can now create an account.

--- a/BachelorModelViewController/BachelorModelViewController.csproj
+++ b/BachelorModelViewController/BachelorModelViewController.csproj
@@ -32,7 +32,9 @@
 
   <ItemGroup>
     <Folder Include="Models\ViewModels\AccountViewModels\" />
-    <Folder Include="Models\ViewModels\ManagedViewModels\" />
+    <Folder Include="Models\ViewModels\ManageViewModels\" />
+    <Folder Include="Views\Account\" />
+    <Folder Include="Views\Manage\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
