MOF modelled Datatype

--- a/BachelorModelViewController/BachelorModelViewController.csproj
+++ b/BachelorModelViewController/BachelorModelViewController.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Data\" />
     <Folder Include="Models\ViewModels\AccountViewModels\" />
     <Folder Include="Models\ViewModels\ManageViewModels\" />
     <Folder Include="Views\Account\" />
