--- a/BachelorModelViewController/BachelorModelViewController.csproj
+++ b/BachelorModelViewController/BachelorModelViewController.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\DataOutdated\**" />
+    <Content Remove="Models\DataOutdated\**" />
+    <EmbeddedResource Remove="Models\DataOutdated\**" />
+    <None Remove="Models\DataOutdated\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\DatatypeController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
