initial mongo setup.

--- a/BachelorModelViewController/appsettings.json
+++ b/BachelorModelViewController/appsettings.json
@@ -3,6 +3,10 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=bachelor;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Dataconnection": "Server=localhost:5432;Database=postgres;User=postgres;Password=Admin123;"
   },
+  "MongoConnection": {
+    "ConnectionString": "mongodb://@localhost:41337",
+    "Database": "Cupid"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
