--- a/BachelorModelViewController/appsettings.json
+++ b/BachelorModelViewController/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=bachelor;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Dataconnection": "Server=localhost:5432;Database=postgres;User=postgres;Password=Admin123;"
+    "Dataconnection": "Server=localhost:5432;Database=postgres;User=postgres;Password=Admin123;",
+    "Mongoconnection":  "mongodb://localhost:27017"
   },
   "MongoConnection": {
-    "ConnectionString": "mongodb://@localhost:41337",
     "Database": "Cupid"
   },
   "Logging": {
