new structure of api calls userAuthenticated not made yet

--- a/BachelorModelViewController/appsettings.json
+++ b/BachelorModelViewController/appsettings.json
@@ -5,7 +5,7 @@
     "Mongoconnection":  "mongodb://localhost:27017"
   },
   "MongoConnection": {
-    "Database": "Cupid"
+    "Database": "cupid"
   },
   "Logging": {
     "IncludeScopes": false,
